# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/aafwk/standard/feature.gni")

module_output_path = "ability_runtime/aafwk_L2"

###############################################################################
config("module_private_config") {
  visibility = [ ":*" ]
  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
  include_dirs = [
    "//third_party/json/include",
    "//utils/native/base/include",
    "//sdk/appexecfwk_L2/appexecfwk_base/include",
    "//foundation/aafwk/standard/interfaces/innerkits/ability_manager/include",
    "//foundation/aafwk/standard/interfaces/innerkits/uri/include",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler/include",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    "//foundation/aafwk/standard/services/common/include",
    "//foundation/aafwk/standard/frameworks/kits/test/mock/AMS",
    "//foundation/aafwk/standard/services/common/include",
    "//foundation/aafwk/standard/frameworks/kits/ability/native/test/mock/include",
    "//foundation/aafwk/standard/frameworks/kits/test/mock/DemoAbility",
    "//foundation/aafwk/standard/services/abilitymgr/include",
    "//third_party/jsoncpp/include",
    "//foundation/aafwk/standard/interfaces/innerkits/dataobs_manager/include",
  ]
}

ohos_moduletest("ability_moduletest") {
  module_out_path = module_output_path
  sources = [
    "//foundation/aafwk/standard/frameworks/kits/ability/native/test/mock/include/mock_bundle_manager.cpp",
    "//foundation/aafwk/standard/frameworks/kits/ability/native/test/mock/include/sys_mgr_client_mock.cpp",
    "//foundation/aafwk/standard/frameworks/kits/test/mock/AMS/mock_ability_manager_client.cpp",
    "//foundation/aafwk/standard/frameworks/kits/test/mock/AMS/mock_ability_manager_service.cpp",
    "//foundation/aafwk/standard/frameworks/kits/test/mock/DemoAbility/demo_ability_test.cpp",
    "//foundation/aafwk/standard/frameworks/kits/test/mock/DemoAbility/mock_lifecycle_observer.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/ability_connect_callback_stub.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/ability_manager_proxy.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/ability_manager_stub.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/ability_mission_info.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/ability_record_info.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/ability_scheduler_proxy.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/ability_scheduler_stub.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/caller_info.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/image_info.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/launch_param.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/lifecycle_state_info.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/mission_description_info.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/mission_info.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/mission_listener_proxy.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/mission_listener_stub.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/mission_option.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/mission_snapshot.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/remote_mission_listener_proxy.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/remote_mission_listener_stub.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/sender_info.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/shared_memory.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/stack_setting.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/want_sender_info.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/wants_info.cpp",
    "moduletest/cpp/abilitytest/ability_test.cpp",
  ]

  configs = [
    ":module_private_config",
    "//foundation/aafwk/standard/interfaces/innerkits/want:want_public_config",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:ability_config",
  ]

  deps = [
    "//base/global/resmgr_standard/frameworks/resmgr:global_resmgr",
    "//base/hiviewdfx/hiview/adapter/utility:hiview_adapter_utility",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:dummy_classes",
    "//foundation/aafwk/standard/frameworks/kits/appkit:appkit_native",
    "//foundation/aafwk/standard/interfaces/innerkits/ability_manager:ability_manager",
    "//foundation/aafwk/standard/interfaces/innerkits/app_manager:app_manager",
    "//foundation/aafwk/standard/interfaces/innerkits/base:base",
    "//foundation/aafwk/standard/interfaces/innerkits/uri:zuri",
    "//foundation/aafwk/standard/interfaces/innerkits/want:want",
    "//foundation/appexecfwk/standard/common:libappexecfwk_common",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "bundle_framework:appexecfwk_core",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "native_appdatamgr:native_appdatafwk",
    "native_appdatamgr:native_dataability",
    "native_appdatamgr:native_rdb",
  ]

  if (ability_runtime_graphics) {
    deps += [ "//foundation/multimedia/image_standard/interfaces/innerkits:image_native" ]
    external_deps += [ "input:libmmi-client" ]
  }
}

ohos_moduletest("ability_conetxt_test") {
  module_out_path = module_output_path
  sources = [
    "//foundation/aafwk/standard/frameworks/kits/ability/native/test/mock/include/mock_bundle_manager.cpp",
    "//foundation/aafwk/standard/frameworks/kits/ability/native/test/mock/include/sys_mgr_client_mock.cpp",
    "//foundation/aafwk/standard/frameworks/kits/test/mock/AMS/mock_ability_manager_client.cpp",
    "//foundation/aafwk/standard/frameworks/kits/test/mock/AMS/mock_serviceability_manager_service.cpp",
    "//foundation/aafwk/standard/frameworks/kits/test/mock/DemoAbility/demo_ability_test.cpp",
    "//foundation/aafwk/standard/frameworks/kits/test/mock/DemoAbility/mock_lifecycle_observer.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/ability_connect_callback_stub.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/ability_manager_proxy.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/ability_manager_stub.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/ability_record_info.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/ability_scheduler_proxy.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/ability_scheduler_stub.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/caller_info.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/launch_param.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/lifecycle_state_info.cpp",
    "moduletest/cpp/abilitytest/ability_context_test.cpp",
  ]

  configs = [
    ":module_private_config",
    "//foundation/aafwk/standard/interfaces/innerkits/want:want_public_config",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:ability_config",
  ]

  deps = [
    "//base/global/resmgr_standard/frameworks/resmgr:global_resmgr",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:dummy_classes",
    "//foundation/aafwk/standard/frameworks/kits/appkit:appkit_native",
    "//foundation/aafwk/standard/interfaces/innerkits/ability_manager:ability_manager",
    "//foundation/aafwk/standard/interfaces/innerkits/app_manager:app_manager",
    "//foundation/aafwk/standard/interfaces/innerkits/base:base",
    "//foundation/aafwk/standard/interfaces/innerkits/uri:zuri",
    "//foundation/aafwk/standard/interfaces/innerkits/want:want",
    "//foundation/appexecfwk/standard/common:libappexecfwk_common",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:configuration",
    "bundle_framework:appexecfwk_core",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "native_appdatamgr:native_appdatafwk",
    "native_appdatamgr:native_dataability",
    "native_appdatamgr:native_rdb",
  ]
  if (ability_runtime_graphics) {
    external_deps += [ "input:libmmi-client" ]
  }
}

ohos_moduletest("ability_thread_call_request_module_test") {
  module_out_path = module_output_path
  sources = [
    "//foundation/aafwk/standard/frameworks/kits/appkit/native/app/src/context_container.cpp",
    "//foundation/aafwk/standard/frameworks/kits/test/moduletest/cpp/abilitytest/ability_thread_call_request_module_test.cpp",
    "//foundation/aafwk/standard/interfaces/innerkits/app_manager/src/appmgr/configuration.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [
    "//foundation/aafwk/standard/common/task_dispatcher:task_dispatcher",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/aafwk/standard/frameworks/kits/appkit:app_context",
    "//foundation/aafwk/standard/interfaces/innerkits/ability_manager:ability_manager",
    "//foundation/aafwk/standard/interfaces/innerkits/uri:zuri",
    "//foundation/aafwk/standard/interfaces/innerkits/want:want",
    "//foundation/appexecfwk/standard/common:libappexecfwk_common",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [ "ability_runtime:runtime" ]
}

ohos_moduletest("data_ability_operation_moduletest") {
  module_out_path = module_output_path
  sources = [
    "//foundation/aafwk/standard/frameworks/kits/ability/native/src/data_ability_operation.cpp",
    "//foundation/aafwk/standard/frameworks/kits/ability/native/src/data_ability_operation_builder.cpp",
    "//foundation/aafwk/standard/frameworks/kits/ability/native/test/mock/include/mock_bundle_manager.cpp",
    "//foundation/aafwk/standard/frameworks/kits/ability/native/test/mock/include/sys_mgr_client_mock.cpp",
    "//foundation/aafwk/standard/frameworks/kits/test/mock/AMS/mock_ability_manager_client.cpp",
    "//foundation/aafwk/standard/frameworks/kits/test/mock/AMS/mock_ability_manager_service.cpp",
    "//foundation/aafwk/standard/frameworks/kits/test/mock/DemoAbility/demo_ability_test.cpp",
    "//foundation/aafwk/standard/frameworks/kits/test/mock/DemoAbility/mock_lifecycle_observer.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/ability_connect_callback_stub.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/ability_manager_proxy.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/ability_manager_stub.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/ability_mission_info.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/ability_record_info.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/ability_scheduler_proxy.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/ability_scheduler_stub.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/caller_info.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/lifecycle_state_info.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/mission_description_info.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/mission_info.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/mission_listener_proxy.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/mission_listener_stub.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/mission_snapshot.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/remote_mission_listener_proxy.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/remote_mission_listener_stub.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/sender_info.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/want_sender_info.cpp",
    "//foundation/aafwk/standard/services/abilitymgr/src/wants_info.cpp",
    "moduletest/cpp/abilitytest/data_ability_operation_module_test.cpp",
  ]

  configs = [
    ":module_private_config",
    "//foundation/aafwk/standard/interfaces/innerkits/want:want_public_config",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:ability_config",
  ]

  deps = [
    "//base/global/resmgr_standard/frameworks/resmgr:global_resmgr",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:dummy_classes",
    "//foundation/aafwk/standard/frameworks/kits/appkit:appkit_native",
    "//foundation/aafwk/standard/interfaces/innerkits/ability_manager:ability_manager",
    "//foundation/aafwk/standard/interfaces/innerkits/app_manager:app_manager",
    "//foundation/aafwk/standard/interfaces/innerkits/base:base",
    "//foundation/aafwk/standard/interfaces/innerkits/uri:zuri",
    "//foundation/aafwk/standard/interfaces/innerkits/want:want",
    "//foundation/appexecfwk/standard/common:libappexecfwk_common",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:configuration",
    "bundle_framework:appexecfwk_core",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "native_appdatamgr:native_appdatafwk",
    "native_appdatamgr:native_dataability",
    "native_appdatamgr:native_rdb",
  ]

  if (ability_runtime_graphics) {
    deps += [ "//foundation/multimedia/image_standard/interfaces/innerkits:image_native" ]
    external_deps += [ "input:libmmi-client" ]
  }
}

ohos_moduletest("data_ability_helper_module_test") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/aafwk/standard/frameworks/kits/test/mock/DemoAbility",
    "//foundation/aafwk/standard/frameworks/kits/test/mock/DemoObServer",
    "//foundation/aafwk/standard/frameworks/kits/ability/native/test/mock/include",
    "//foundation/aafwk/standard/services/dataobsmgr/include",
    "//foundation/aafwk/standard/interfaces/innerkits/dataobs_manager/include",
    "//foundation/distributedschedule/samgr/services/samgr/native/include",
    "//foundation/communication/ipc/interfaces/innerkits/libdbinder/include",
  ]

  sources = [ "//foundation/aafwk/standard/frameworks/kits/test/moduletest/cpp/abilitytest/data_ability_helper_module_test.cpp" ]

  configs = [
    ":module_private_config",
    "//foundation/aafwk/standard/interfaces/innerkits/want:want_public_config",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:ability_config",
  ]

  deps = [
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/aafwk/standard/frameworks/kits/appkit:appkit_native",
    "//foundation/aafwk/standard/interfaces/innerkits/ability_manager:ability_manager",
    "//foundation/aafwk/standard/interfaces/innerkits/base:base",
    "//foundation/aafwk/standard/interfaces/innerkits/uri:zuri",
    "//foundation/aafwk/standard/interfaces/innerkits/want:want",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "native_appdatamgr:native_appdatafwk",
    "native_appdatamgr:native_dataability",
    "native_appdatamgr:native_rdb",
  ]

  if (ability_runtime_graphics) {
    external_deps += [ "input:libmmi-client" ]
  }
}

################################################################################
group("moduletest") {
  testonly = true

  deps = []

  if (is_phone_product) {
    deps += [
      ":ability_conetxt_test",
      ":ability_thread_call_request_module_test",

      # ":ability_moduletest",
      ":data_ability_helper_module_test",
      ":data_ability_operation_moduletest",
    ]
  }
}
