# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/aafwk/standard/aafwk.gni")

module_output_path = "ability_runtime/aafwk_L2"

###############################################################################
config("module_private_config") {
  visibility = [ ":*" ]
  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
  include_dirs = [
    "//third_party/json/include",
    "//utils/native/base/include",
    "//sdk/appexecfwk_L2/appexecfwk_base/include",
    "${aafwk_path}/interfaces/innerkits/ability_manager/include",
    "${base_inner_api_path}/uri/include",
    "${appexecfwk_innerkits_path}/libeventhandler/include",
    "${distributedschedule_path}/samgr/interfaces/innerkits/samgr_proxy/include",
    "${aafwk_path}/services/common/include",
    "${aafwk_path}/frameworks/kits/test/mock/AMS",
    "${aafwk_path}/services/common/include",
    "${aafwk_path}/frameworks/kits/ability/native/test/mock/include",
    "${aafwk_path}/frameworks/kits/test/mock/DemoAbility",
    "${aafwk_path}/services/abilitymgr/include",
    "//third_party/jsoncpp/include",
    "${aafwk_path}/interfaces/innerkits/dataobs_manager/include",
  ]
}

ohos_moduletest("ability_moduletest") {
  module_out_path = module_output_path
  sources = [
    "${aafwk_path}/frameworks/kits/ability/native/test/mock/include/mock_bundle_manager.cpp",
    "${aafwk_path}/frameworks/kits/ability/native/test/mock/include/sys_mgr_client_mock.cpp",
    "${aafwk_path}/frameworks/kits/test/mock/AMS/mock_ability_manager_client.cpp",
    "${aafwk_path}/frameworks/kits/test/mock/AMS/mock_ability_manager_service.cpp",
    "${aafwk_path}/frameworks/kits/test/mock/DemoAbility/demo_ability_test.cpp",
    "${aafwk_path}/frameworks/kits/test/mock/DemoAbility/mock_lifecycle_observer.cpp",
    "${aafwk_path}/services/abilitymgr/src/ability_connect_callback_stub.cpp",
    "${aafwk_path}/services/abilitymgr/src/ability_manager_proxy.cpp",
    "${aafwk_path}/services/abilitymgr/src/ability_manager_stub.cpp",
    "${aafwk_path}/services/abilitymgr/src/ability_scheduler_proxy.cpp",
    "${aafwk_path}/services/abilitymgr/src/ability_scheduler_stub.cpp",
    "${aafwk_path}/services/abilitymgr/src/caller_info.cpp",
    "${aafwk_path}/services/abilitymgr/src/image_info.cpp",
    "${aafwk_path}/services/abilitymgr/src/launch_param.cpp",
    "${aafwk_path}/services/abilitymgr/src/lifecycle_state_info.cpp",
    "${aafwk_path}/services/abilitymgr/src/mission_info.cpp",
    "${aafwk_path}/services/abilitymgr/src/mission_listener_proxy.cpp",
    "${aafwk_path}/services/abilitymgr/src/mission_listener_stub.cpp",
    "${aafwk_path}/services/abilitymgr/src/mission_snapshot.cpp",
    "${aafwk_path}/services/abilitymgr/src/remote_mission_listener_proxy.cpp",
    "${aafwk_path}/services/abilitymgr/src/remote_mission_listener_stub.cpp",
    "${aafwk_path}/services/abilitymgr/src/sender_info.cpp",
    "${aafwk_path}/services/abilitymgr/src/want_sender_info.cpp",
    "${aafwk_path}/services/abilitymgr/src/wants_info.cpp",
    "${base_path}/frameworks/native/configuration/src/configuration.cpp",
    "moduletest/cpp/abilitytest/ability_test.cpp",
  ]

  configs = [
    ":module_private_config",
    "${base_path}:want_public_config",
    "${aafwk_path}/frameworks/kits/ability/native:ability_config",
  ]

  deps = [
    "${aafwk_path}/frameworks/kits/ability/native:abilitykit_native",
    "${aafwk_path}/frameworks/kits/appkit:appkit_native",
    "${aafwk_path}/interfaces/innerkits/ability_manager:ability_manager",
    "${aafwk_path}/interfaces/innerkits/app_manager:app_manager",
    "${appexecfwk_inner_api_path}/appexecfwk_base:appexecfwk_base",
    "${appexecfwk_path}/common:libappexecfwk_common",
    "${distributedschedule_path}/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "${global_path}/resource_management/frameworks/resmgr:global_resmgr",
    "//base/hiviewdfx/hiview/adapter/utility:hiview_adapter_utility",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_base:zuri",
    "bundle_framework:appexecfwk_core",
    "dataability:native_dataability",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "relational_store:native_appdatafwk",
    "relational_store:native_rdb",
  ]

  if (ability_runtime_graphics) {
    deps += [ "${multimedia_path}/interfaces/innerkits:image_native" ]
    external_deps += [ "input:libmmi-client" ]
  }
}

ohos_moduletest("ability_conetxt_test") {
  module_out_path = module_output_path
  sources = [
    "${aafwk_path}/frameworks/kits/ability/native/test/mock/include/mock_bundle_manager.cpp",
    "${aafwk_path}/frameworks/kits/ability/native/test/mock/include/sys_mgr_client_mock.cpp",
    "${aafwk_path}/frameworks/kits/test/mock/AMS/mock_ability_manager_client.cpp",
    "${aafwk_path}/frameworks/kits/test/mock/AMS/mock_serviceability_manager_service.cpp",
    "${aafwk_path}/frameworks/kits/test/mock/DemoAbility/demo_ability_test.cpp",
    "${aafwk_path}/frameworks/kits/test/mock/DemoAbility/mock_lifecycle_observer.cpp",
    "${aafwk_path}/services/abilitymgr/src/ability_connect_callback_stub.cpp",
    "${aafwk_path}/services/abilitymgr/src/ability_manager_proxy.cpp",
    "${aafwk_path}/services/abilitymgr/src/ability_manager_stub.cpp",
    "${aafwk_path}/services/abilitymgr/src/ability_scheduler_proxy.cpp",
    "${aafwk_path}/services/abilitymgr/src/ability_scheduler_stub.cpp",
    "${aafwk_path}/services/abilitymgr/src/caller_info.cpp",
    "${aafwk_path}/services/abilitymgr/src/launch_param.cpp",
    "${aafwk_path}/services/abilitymgr/src/lifecycle_state_info.cpp",
    "moduletest/cpp/abilitytest/ability_context_test.cpp",
  ]

  configs = [
    ":module_private_config",
    "${base_path}:want_public_config",
    "${aafwk_path}/frameworks/kits/ability/native:ability_config",
  ]

  deps = [
    "${aafwk_path}/frameworks/kits/ability/native:abilitykit_native",
    "${aafwk_path}/frameworks/kits/appkit:appkit_native",
    "${aafwk_path}/interfaces/innerkits/ability_manager:ability_manager",
    "${aafwk_path}/interfaces/innerkits/app_manager:app_manager",
    "${appexecfwk_inner_api_path}/appexecfwk_base:appexecfwk_base",
    "${appexecfwk_path}/common:libappexecfwk_common",
    "${distributedschedule_path}/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "${global_path}/resource_management/frameworks/resmgr:global_resmgr",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:configuration",
    "ability_base:want",
    "ability_base:zuri",
    "bundle_framework:appexecfwk_core",
    "dataability:native_dataability",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "relational_store:native_appdatafwk",
    "relational_store:native_rdb",
  ]
  if (ability_runtime_graphics) {
    external_deps += [ "input:libmmi-client" ]
  }
}

ohos_moduletest("ability_thread_call_request_module_test") {
  module_out_path = module_output_path
  sources = [
    "${aafwk_path}/frameworks/kits/appkit/native/app/src/context_container.cpp",
    "${aafwk_path}/frameworks/kits/test/moduletest/cpp/abilitytest/ability_thread_call_request_module_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [
    "${aafwk_path}/frameworks/kits/ability/native:abilitykit_native",
    "${aafwk_path}/frameworks/kits/appkit:app_context",
    "${aafwk_path}/interfaces/innerkits/ability_manager:ability_manager",
    "${appexecfwk_inner_api_path}/appexecfwk_base:appexecfwk_base",
    "${appexecfwk_innerkits_path}/libeventhandler:libeventhandler",
    "${appexecfwk_path}/common:libappexecfwk_common",
    "${distributedschedule_path}/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "ability_base:configuration",
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:runtime",
  ]
}

ohos_moduletest("data_ability_operation_moduletest") {
  module_out_path = module_output_path
  sources = [
    "${aafwk_path}/frameworks/kits/ability/native/src/data_ability_operation.cpp",
    "${aafwk_path}/frameworks/kits/ability/native/src/data_ability_operation_builder.cpp",
    "${aafwk_path}/frameworks/kits/ability/native/test/mock/include/mock_bundle_manager.cpp",
    "${aafwk_path}/frameworks/kits/ability/native/test/mock/include/sys_mgr_client_mock.cpp",
    "${aafwk_path}/frameworks/kits/test/mock/AMS/mock_ability_manager_client.cpp",
    "${aafwk_path}/frameworks/kits/test/mock/AMS/mock_ability_manager_service.cpp",
    "${aafwk_path}/frameworks/kits/test/mock/DemoAbility/demo_ability_test.cpp",
    "${aafwk_path}/frameworks/kits/test/mock/DemoAbility/mock_lifecycle_observer.cpp",
    "${aafwk_path}/services/abilitymgr/src/ability_connect_callback_stub.cpp",
    "${aafwk_path}/services/abilitymgr/src/ability_manager_proxy.cpp",
    "${aafwk_path}/services/abilitymgr/src/ability_manager_stub.cpp",
    "${aafwk_path}/services/abilitymgr/src/ability_scheduler_proxy.cpp",
    "${aafwk_path}/services/abilitymgr/src/ability_scheduler_stub.cpp",
    "${aafwk_path}/services/abilitymgr/src/caller_info.cpp",
    "${aafwk_path}/services/abilitymgr/src/lifecycle_state_info.cpp",
    "${aafwk_path}/services/abilitymgr/src/mission_info.cpp",
    "${aafwk_path}/services/abilitymgr/src/mission_listener_proxy.cpp",
    "${aafwk_path}/services/abilitymgr/src/mission_listener_stub.cpp",
    "${aafwk_path}/services/abilitymgr/src/mission_snapshot.cpp",
    "${aafwk_path}/services/abilitymgr/src/remote_mission_listener_proxy.cpp",
    "${aafwk_path}/services/abilitymgr/src/remote_mission_listener_stub.cpp",
    "${aafwk_path}/services/abilitymgr/src/sender_info.cpp",
    "${aafwk_path}/services/abilitymgr/src/want_sender_info.cpp",
    "${aafwk_path}/services/abilitymgr/src/wants_info.cpp",
    "moduletest/cpp/abilitytest/data_ability_operation_module_test.cpp",
  ]

  configs = [
    ":module_private_config",
    "${base_path}:want_public_config",
    "${aafwk_path}/frameworks/kits/ability/native:ability_config",
  ]

  deps = [
    "${aafwk_path}/frameworks/kits/ability/native:abilitykit_native",
    "${aafwk_path}/frameworks/kits/appkit:appkit_native",
    "${aafwk_path}/interfaces/innerkits/ability_manager:ability_manager",
    "${aafwk_path}/interfaces/innerkits/app_manager:app_manager",
    "${appexecfwk_inner_api_path}/appexecfwk_base:appexecfwk_base",
    "${appexecfwk_path}/common:libappexecfwk_common",
    "${distributedschedule_path}/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "${global_path}/resource_management/frameworks/resmgr:global_resmgr",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:configuration",
    "ability_base:want",
    "ability_base:zuri",
    "bundle_framework:appexecfwk_core",
    "dataability:native_dataability",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "relational_store:native_appdatafwk",
    "relational_store:native_rdb",
  ]

  if (ability_runtime_graphics) {
    deps += [ "${multimedia_path}/interfaces/innerkits:image_native" ]
    external_deps += [ "input:libmmi-client" ]
  }
}

ohos_moduletest("data_ability_helper_module_test") {
  module_out_path = module_output_path

  include_dirs = [
    "${aafwk_path}/frameworks/kits/test/mock/DemoAbility",
    "${aafwk_path}/frameworks/kits/test/mock/DemoObServer",
    "${aafwk_path}/frameworks/kits/ability/native/test/mock/include",
    "${aafwk_path}/services/dataobsmgr/include",
    "${aafwk_path}/interfaces/innerkits/dataobs_manager/include",
    "${distributedschedule_path}/samgr/services/samgr/native/include",
    "//foundation/communication/ipc/interfaces/innerkits/libdbinder/include",
  ]

  sources = [ "${aafwk_path}/frameworks/kits/test/moduletest/cpp/abilitytest/data_ability_helper_module_test.cpp" ]

  configs = [
    ":module_private_config",
    "${base_path}:want_public_config",
    "${aafwk_path}/frameworks/kits/ability/native:ability_config",
  ]

  deps = [
    "${aafwk_path}/frameworks/kits/ability/native:abilitykit_native",
    "${aafwk_path}/frameworks/kits/appkit:appkit_native",
    "${aafwk_path}/interfaces/innerkits/ability_manager:ability_manager",
    "${appexecfwk_inner_api_path}/appexecfwk_base:appexecfwk_base",
    "${appexecfwk_innerkits_path}/libeventhandler:libeventhandler",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_base:zuri",
    "dataability:native_dataability",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "relational_store:native_appdatafwk",
    "relational_store:native_rdb",
  ]

  if (ability_runtime_graphics) {
    external_deps += [ "input:libmmi-client" ]
  }
}

################################################################################
group("moduletest") {
  testonly = true

  deps = []

  if (is_phone_product) {
    deps += [
      ":ability_conetxt_test",
      ":ability_moduletest",
      ":ability_thread_call_request_module_test",
      ":data_ability_helper_module_test",
      ":data_ability_operation_moduletest",
    ]
  }
}
